user GET, POST, PUT, DELETE working as expected
