# controllers/users.js
@@ -6,7 +6,7 @@ const { get } = require('mongoose');
 const getAllUsers = async (req, res) => {
     //#swagger.tags = ['Users'] 
     try {
-        const result = await User.find();
+        const users = await User.find();
         res.status(200).json(users);
     } catch (err) {
         res.status(400).json({ message: err.message });
@@ -27,7 +27,14 @@ const getSingleUser = async (req, res) => {
 const createUser = async (req, res) => {
      //#swagger.tags = ['Users'] 
     try {
-        const user = await User.create(req.body);
+        const newUser = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
+            email: req.body.email,
+            phoneNumber: req.body.phoneNumber,
+            role: req.body.role
+        }
+        const user = await User.create(newUser);
         res.status(201).json(user);
     } catch (err) {
         res.status(400).json({ message: err.message });
@@ -37,8 +44,16 @@ const createUser = async (req, res) => {
 const updateUser = async (req, res) => {
      //#swagger.tags = ['Users'] 
     try {
-        const updatedUser = await User.findByIdAndUpdate(req.params.id, req.body, { after: true, runValidators: true });
+        const user = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
+            email: req.body.email,
+            phoneNumber: req.body.phoneNumber,
+            role: req.body.role
+        }
+        const updatedUser = await User.findByIdAndUpdate(req.params.id, user, { after: true, runValidators: true });
         if (!updatedUser) return res.status(404).json({ message: 'User not found' });
+         res.status(201).json(updateUser);
     } catch (err) {
         res.status(400).json({ message: err.message });
     }
